modules/cli/src/test/resources/bad/reach/globals/grecursion/Recursion03b.scr
module bad.reach.globals.grecursion.Recursion03b;


global protocol Recursion3b(role A, role B)
{
	rec X
	{
		l1() from A to B;
		rec Y
		{
			l2() from B to A;
			continue Y;
			//continue X;  // Uncomment OK if above line is commented
		}
		//l3() from B to A;  // Uncommemt bad
	}
	l4() from B to A;  // Uncomment bad
}

